# AVL-BASIC

./: .bumpversion.cfg  .gitattributes  .gitignore  Cargo.toml  MANUAL.es.txt  MANUAL.txt  README.md  basic.py  basicfonts.py  build.rs  g-subsample.bas
packaging/: install_linux_desktop.sh  package_windows_release.py
rust/: Cargo.toml  README.md  build.rs  windows.rc
rust/src/: console.rs  error.rs  expr.rs  fonts.rs  graphics.rs  interpreter.rs  lib.rs  program.rs  reserved.rs  window.rs
rust/tests/: parity.rs  python_direct_regression_parity.rs  python_graphics_parity.rs  python_program_parity.rs  windows_graphics_ctrl_c.rs
rust/tools/: benchmark_perf.py  oracle_compare.py  run_python_direct_regression_parity.py  run_python_graphics_parity.py  run_python_print_using_parity.py  run_python_text_parity.py
samples/: g-animation.bas  g-animation2.bas  g-animation3.bas  g-arkanoid.bas  g-axis.bas  g-balls.bas  g-banner.bas  g-bernoulli.bas  g-bernoulli2.bas  g-bifurcation.bas  g-bigbang.bas  g-bobs.bas  g-chartest.bas  g-chartest2.bas  g-chess960-modern.bas  g-chess960.bas  g-colors.bas  g-cube-tquad.bas  g-cube.bas  g-cube2.bas  g-cube3.bas  g-demo.bas  g-demo2.bas  g-demo3.bas  g-demo4.bas  g-dot-tunnel.bas  g-fdragon.bas  g-fhilbert.bas  g-flevy.bas  g-flevy2.bas  g-fmandelbrot.bas  g-fsierpinski.bas  g-fsnow.bas  g-ftree.bas  g-ftree2.bas  g-ftree3.bas  g-ftree4.bas  g-function.bas  g-function2.bas  g-function2b.bas  (+73 more)
src/: console.rs  expr.rs  fonts.rs  graphics.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  reserved.rs  using_format.rs  value.rs  window.rs
tests/: conftest.py  parity.rs  python_direct_regression_parity.rs  python_graphics_parity.rs  python_program_parity.rs  test_basic.py  windows_graphics_ctrl_c.rs
tools/: benchmark_perf.py  oracle_compare.py  run_python_direct_regression_parity.py  run_python_graphics_parity.py  run_python_print_using_parity.py  run_python_text_parity.py
(+9 files in other folders)
