[package]
name = "avl-basic"
version = "1.5.63"
edition = "2021"
license = "GPL-3.0-or-later"
build = "build.rs"

[[bin]]
name = "avl-basic"
path = "src/main.rs"

[lib]
name = "avl_basic"
path = "src/lib.rs"

[dependencies]
crossterm = "0.27"
ctrlc = "3"
minifb = { version = "0.28", default-features = false, features = ["x11"] }
png = "0.17"
raw-window-handle = "0.6"
softbuffer = { version = "0.4.8", default-features = false, features = ["x11", "x11-dlopen"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
embed-resource = "3.0.9"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
